final with materilzie

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,51 +1,62 @@
-<h1>Burgers!</h1>
 
 
+<div class="container">
 
-<ol>
-  {{#each burger}}
-    {{#unless this.devoured}}
-      <li>
-        {{this.burger_name}}
-
-        <form action="/{{this.id}}?_method=PUT" method="POST">
-          <input type="hidden" name="devour" value="true">
-          <button type="submit">Devour Me</button>
+  
+  <div class="row flow-text"">
+    <div class="col s6 offset-s3">
+      <div class="form-group center-align">
+        <h2 class="center-align">Add a Burger</h2>
+        <form class="create-update-form" action="/" method="POST">
+            <label for="burger">Burger Name:</label>
+            <input type="text" id="burger" name="burger_name">
+            <button class="waves-effect waves-light hoverable brown lighten-4 btn" type="submit">Add Burger</button>
         </form>
-      </li>
-    {{/unless}}
-  {{/each}}
-</ol>
+      </div> 
+     </div> 
+  </div>  
 
 
-<ul>
-  {{#each burger}}
-    {{#if this.devoured}}
-      <li>
-        {{this.burger_name}}
+  <div class="row flow-text"">
 
-        <form action="/{{this.id}}?_method=PUT" method="POST">
-          <input type="hidden" name="sleepy" value="false">
-          <button type="submit">Throw Up!</button>
-        </form>
-      </li>
-    {{/if}}
-  {{/each}}
-</ul>
+    <div id ="results" class="center-align"> 
+      <div class="col s6" id="live">
+        <h3>Delicious UnDevoured Burgers</h3>
+        {{#each burgers}}
+       
+        <div class="center-align">
+            {{#unless this.devoured}}
+            <h4>
+            {{this.id}}<span>.</span>
+            {{this.burger_name}}
+              <form action="/{{this.id}}?_method=PUT" method="POST">
+                <input type="hidden" name="devoured" value="true">
+                <button class="waves-effect waves-light hoverable brown lighten-4 btn" type="submit">Devour Me!</button>
+              </form>
+            </h4> 
+            {{/unless}} 
+          </div>
+       
+        {{/each}}  
+       </div>
+    <div class="col s6" id="eaten">  
+      <h3>Delicious Eaten </br> Burgers</h3> 
+      {{#each burgers}}
+       <div class="center-align">
+          {{#if this.devoured}}
+          <h4>
+          {{this.id}}<span>.</span>
+          {{this.burger_name}}
+          <form action="/{{this.id}}?_method=PUT" method="POST">
+              <input type="hidden" name="devoured" value="false">
+              <button class="waves-effect waves-light hoverable brown lighten-4 btn" type="submit">Throw Up!</button>
+            </form>
+          </h4> 
+          {{/if}}
+        </div>  
+      {{/each}} 
+     </div>  
+   </div> 
 
-<h2>Add a burger</h2>
-<form class="create-update-form" action="/" method="POST">
-
-  <div class="form-group">
-    <label for="burger">Burger Name:</label>
-    <input type="text" id="burger" name="burger_name">
   </div>
-
-  <div class="form-group">
-    <label for="devour">Devour?</label><br>
-    <input type="radio" name="sleepy" value="1" checked> Devour!<br>
-    <input type="radio" name="sleepy" value="0"> Throw up!
-  </div>
-
-  <button type="submit">Add Burger</button>
-</form>
+</div>
